2004-05-04  Andreas Kupries  <andreask@activestate.com>

	* mpformats/_nroff.tcl: Fixed [SF Tcllib Bug 943146]. Added markup
	* mpformats/fmt.nroff: protection code like already in use for
	                       HTML and XML to handle nroff's special
	                       characters, i.e. the backslash properly.
	                       Also fixed handling of leading dashes in
	                       'opt_def'.

2004-04-22  Joe English  <jenglish@users.sourceforge.net>

	* mpformats/fmt.xml: BUGFIX: "puts stderr" ==> "puts_stderr".
	
2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.test: Fixed problems with Tcl 8.5, the tests were
	  dependent on the order of keys in the result of [array get].

2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.wiki (fmt_manpage_end): Fixed usage of wrong
	  variable ('copyright' was used, should have been 'ct').
	  [Bug 826206].

2003-06-06  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fr.msg: Added french message catalog. Supplied by
	  David Zolli <dzolli@users.sourceforge.net>, aka kroc. This is
	  tracker item [Bug 744149].

2003-05-23  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.nroff (fmt_arg_def, fmt_cmd_def): Analogous errors
	  to fmt_opt_def, see below. Fixed. Reported by David Welton.

2003-05-21  Andreas Kupries  <andreask@activestate.com>

	* mpformats/fmt.nroff (fmt_opt_def): Fixed bug. Called [option],
	  should have been [fmt_option]. Prevented the nroff conversion of
	  the multiplexer documentation. Reported by David Welton.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* checker_toc.tcl: Bug fixes for handling of nested toc divisions.
